--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
             <h3>Interesting Projects</h3>
             <ul>
                 <li>
+                    <a href="https://github.com/zazyzaya/EulerTemporalLP" target="_blank">Euler: Detecting Network Lateral Movement via Scalable Temporal Graph Link Prediction</a>
+                </li>
+                <li>
                     <a href="https://graphlab.seas.gwu.edu/graggle/" target="_blank">GRAGGLE: A Graph-based Document Clustering Algorithm with Application on a COVID-19 Corpus</a>
                 </li>
                 <li>
@@ -42,7 +45,7 @@
             <h3>Publications</h3>
             <h4>Academic</h4>
             <ul>
-                <li>Nothing yet... waiting to hear back on GRAGGLE</li>
+                <li>Nothing yet... waiting to hear back on Euler</li>
             </ul>    
             <h4>Other</h4>
             <ul>
