--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <h3>About Me</h3>
                 <p>Ph.D. student at GWU 
                 <br>Studying computer engineering
-                <br>Research assistant with <a href="https://graphlab.seas.gwu.edu/" target="_blank">the GWU Graph Lab</a>
+                <br>Research assistant with <a href="https://www2.seas.gwu.edu/~howie/glab.html" target="_blank">the GWU Graph Lab</a>
                 <br>2020 ARCS/MWC Scholar
                 <br><br>
                 B.S. Computer Science GMU 2019
