--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
             <div id="body">    
             <h3>Interesting Projects</h3>
             <ul>
+                <li> 
+                    <a href="https://zayastocks.herokuapp.com/" target="_blank">Stock TA Tool</a>
+                </li>
                 <li>
                     <a href="https://github.com/zazyzaya/EulerTemporalLP" target="_blank">Euler: Detecting Network Lateral Movement via Scalable Temporal Graph Link Prediction</a>
                 </li>
