--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <h3>Publications</h3>
             <h4>Academic</h4>
             <ul>
-                <li>Nothing yet... waiting to hear back on Euler</li>
+                <li>Euler: Detecting Network Lateral Movement via Scalable Temporal Link Prediction (King & Huang -- NDSS, 2022)</li>
             </ul>    
             <h4>Other</h4>
             <ul>
