--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <html>
     <head>
         <link rel='stylesheet' type='text/css' href='iking.css'>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-XPT9VWY584"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'G-XPT9VWY584');
+        </script>
     </head>
     <body>
         <div id="main">
@@ -52,6 +61,9 @@
             </ul>    
             <h4>Other</h4>
             <ul>
+                <li>
+                    The Civil Disobedience Club (Excerpt from <i>The Bucket</i>) -- <a href='https://www.seattlestar.net/2021/12/the-civil-disobedience-club/', target="_blank">The Seattle Star</a> (2021)
+                </li>
                 <li>
                     <a href="https://books.google.com/books/about/The_Bucket_and_Other_Weird_Stories.html?id=xD_HDwAAQBAJ" target="_blank">The Bucket and Other Weird Stories</a> (2019)
                 </li>
