--- a/index.html
+++ b/index.html
@@ -62,10 +62,12 @@
             <h4>Other</h4>
             <ul>
                 <li>
-                    The Civil Disobedience Club (Excerpt from <i>The Bucket</i>) -- <a href='https://www.seattlestar.net/2021/12/the-civil-disobedience-club/', target="_blank">The Seattle Star</a> (2021)
-                </li>
-                <li>
                     <a href="https://books.google.com/books/about/The_Bucket_and_Other_Weird_Stories.html?id=xD_HDwAAQBAJ" target="_blank">The Bucket and Other Weird Stories</a> (2019)
+                    <ul>
+                        <li>
+                            <a href='https://www.seattlestar.net/2021/12/the-civil-disobedience-club/', target="_blank">The Civil Disobedience Club</a> & <a href='https://www.seattlestar.net/2022/03/resignation/', target='_blank'>Resignation</a> (Excerpts) published in The Seattle Star (2021 & 2022)
+                        </li>
+                    </ul>
                 </li>
                 <li>
                     <a href="https://books.google.com/books/about/The_Sixth_Kingdom_and_Other_Essays_I_Wro.html?id=yH9eDwAAQBAJ" target="_blank"> The Sixth Kingdom and Other Essays</a> (2018)
