--- a/index.html
+++ b/index.html
@@ -64,8 +64,12 @@
                 <li>
                     <a href="https://books.google.com/books/about/The_Bucket_and_Other_Weird_Stories.html?id=xD_HDwAAQBAJ" target="_blank">The Bucket and Other Weird Stories</a> (2019)
                     <ul>
+                        Excerpts published:
                         <li>
-                            <a href='https://www.seattlestar.net/2021/12/the-civil-disobedience-club/', target="_blank">The Civil Disobedience Club</a> & <a href='https://www.seattlestar.net/2022/03/resignation/', target='_blank'>Resignation</a> (Excerpts) published in The Seattle Star (2021 & 2022)
+                            <a href='https://www.seattlestar.net/2022/03/resignation/', target='_blank'>Resignation</a> (The Seattle Star 2022)
+                        </li>
+                        <li>
+                            <a href='https://www.seattlestar.net/2021/12/the-civil-disobedience-club/', target="_blank">The Civil Disobedience Club</a> (The Seattle Star 2021)
                         </li>
                     </ul>
                 </li>
