--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
             <ul>
                 <li>
                     <a href="https://books.google.com/books/about/The_Bucket_and_Other_Weird_Stories.html?id=xD_HDwAAQBAJ" target="_blank">The Bucket and Other Weird Stories</a> (2019)
+                    <p>Excerpts published:</p>
                     <ul>
-                        Excerpts published:
                         <li>
                             <a href='https://www.seattlestar.net/2022/03/resignation/', target='_blank'>Resignation</a> (The Seattle Star 2022)
                         </li>
