--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
             <h4>Other</h4>
             <ul>
                 <li>
-                    <a href="https://books.google.com/books/about/The_Bucket_and_Other_Weird_Stories.html?id=xD_HDwAAQBAJ" target="_blank">The Bucket and Other Weird Stories</a> (2019)
-                    <p>Excerpts published:</p>
+                    <a href="https://books.google.com/books/about/The_Bucket_and_Other_Weird_Stories.html?id=xD_HDwAAQBAJ" target="_blank">The Bucket and Other Weird Stories</a> (2019)<br>
+                    Excerpts published:
                     <ul>
                         <li>
                             <a href='https://www.seattlestar.net/2022/03/resignation/', target='_blank'>Resignation</a> (The Seattle Star 2022)
