--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
                     Excerpts published:
                     <ul>
                         <li>
-                            <a href='https://www.seattlestar.net/2022/03/resignation/', target='_blank'>Resignation</a> (The Seattle Star 2022)
+                            <a href='https://www.seattlestar.net/2022/03/resignation/', target='_blank'>Resignation</a> (The Seattle Star, 2022)
                         </li>
                         <li>
-                            <a href='https://www.seattlestar.net/2021/12/the-civil-disobedience-club/', target="_blank">The Civil Disobedience Club</a> (The Seattle Star 2021)
+                            <a href='https://www.seattlestar.net/2021/12/the-civil-disobedience-club/', target="_blank">The Civil Disobedience Club</a> (The Seattle Star, 2021)
                         </li>
                     </ul>
                 </li>
