--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
             <div id="body">    
             <h3>Interesting Projects</h3>
             <ul>
+                <li>
+                    <a href="https://zaya-mancala.herokuapp.com/" target="_blank">(Almost) Unbeatable Mancala AI</a>
+                </li>
                 <li> 
                     <a href="https://zayastocks.herokuapp.com/" target="_blank">Stock TA Tool</a>
-                </li>
-                <li>
-                    <a href="https://github.com/zazyzaya/EulerTemporalLP" target="_blank">Euler: Detecting Network Lateral Movement via Scalable Temporal Graph Link Prediction</a>
                 </li>
                 <li>
                     <a href="https://graphlab.seas.gwu.edu/graggle/" target="_blank">GRAGGLE: A Graph-based Document Clustering Algorithm with Application on a COVID-19 Corpus</a>
