--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
     <script src="https://pixijs.download/release/pixi.js"></script>
   </head>
   <body>
-    <script src="app.js"></script>
+    <script src="/scripts/pixijstest/app.js"></script>
   </body>
 </html>
 
