--- a/mancala.html
+++ b/mancala.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url='https://zaya-mancala.herokuapp.com/'" />
+    <meta http-equiv="refresh" content="0; url='https://zaya-mancala-migrated.herokuapp.com/'" />
   </head>
   <body>
-    <p>Please follow <a href="https://zaya-mancala.herokuapp.com/">this link</a>.</p>
+    <p>Please follow <a href="https://zaya-mancala-migrated.herokuapp.com/">this link</a>.</p>
   </body>
 </html>
