--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <h3>Interesting Projects</h3>
             <ul>
                 <li>
-                    <a href="https://zaya-mancala.herokuapp.com/" target="_blank">(Almost) Unbeatable Mancala AI</a>
+                    <a href="https://zaya-mancala-migrated.herokuapp.com/" target="_blank">(Almost) Unbeatable Mancala AI</a>
                 </li>
                 <li> 
                     <a href="https://zayastocks.herokuapp.com/" target="_blank">Stock TA Tool</a>
