--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
             <h3>Interesting Projects</h3>
             <ul>
                 <li>
+                    <a href="https://isaiahjking.com/ThreeBody/" target="_blank">Three body problem simulator</a>
+                </li>
+                <li>
                     <a href="https://zaya-mancala-migrated.herokuapp.com/" target="_blank">(Almost) Unbeatable Mancala AI</a>
                 </li>
                 <li> 
