--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <h3>Interesting Projects</h3>
             <ul>
                 <li>
-                    <a href="https://isaiahjking.com/ThreeBody/" target="_blank">Three body problem simulator</a>
+                    <a href="https://isaiahjking.com/ThreeBody/" target="_blank">Three Body</a>
                 </li>
                 <li>
                     <a href="https://zaya-mancala-migrated.herokuapp.com/" target="_blank">(Almost) Unbeatable Mancala AI</a>
