--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
     </head>
     <body>
         <div id="main">
-            <div id="infobox">
+            <a href="index.html">
+            <div id="header">
                 <h1>Isaiah J. King</h1>
+            </div>
+            </a>
+            <div id="infobox">
+                <div id="vspace"></div>
                 <div id="headshot"> 
                 <img src='img/headshot.png' alt="Headshot of Isaiah">
                 </div>
@@ -28,6 +33,8 @@
                 <br><br>
                 B.S. Computer Science GMU 2019
                 </p>
+
+                <h3><a href="blog/index.html">Blog</a></h3>
 
             </div>
             <div id="body-container">
@@ -92,6 +99,7 @@
         <div id="footer-container">
             <a href="https://github.com/zazyzaya" target="_blank"><img src='img/github.png'></a>
             <a href="https://linkedin.com/in/isaiah-k-7b730b82/" target="_blank"><img src="img/linkedin.png"></a>
+            <a href="https://medium.com/@iking5" target="_blank"><img src="img/medium.png"></a>
         </div>
         <div id="footer-right">
             <a href="https://graphlab.seas.gwu.edu/" target="_blank">
