Adding boids sim

--- a/index.html
+++ b/index.html
@@ -75,6 +75,12 @@
             <h3>Web Toys</h3>
             <div id="toy-container">
                 <div class="toy">
+                    <a href='/Boids/'>
+                        <img src="img/app-icons/herd.png" class="toy-img">
+                        <div class="toy-name">Flock Sim</div>
+                    </a>
+                </div>
+                <div class="toy">
                     <a href='/WaterSim/'>
                         <img src="img/app-icons/water.png" class="toy-img">
                         <div class="toy-name">Puddle Sim</div>
