--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <h3>Publications</h3>
             <h4>Academic</h4>
             <ul>
-                <li>EdgeTorrent: Real-time Temporal Graph Representations for Intrusion Detection (RAID, 2023)</li>
+                <li><a href='https://dl.acm.org/doi/abs/10.1145/3607199.3607201', target='_blank'>EdgeTorrent: Real-time Temporal Graph Representations for Intrusion Detection</a> (RAID, 2023)</li>
                 <li><a href='https://ieeexplore.ieee.org/abstract/document/10020645', target='_blank'>Graggle: A Graph-based Approach to Document Clustering</a> (IEEE BigData, 2022)</li>
                 <li>Euler: Detecting Network Lateral Movement via Scalable Temporal Link Prediction</li>
                 <ul>
