Added harmonograph toy

--- a/index.html
+++ b/index.html
@@ -106,6 +106,12 @@
             <h3>Web Toys</h3>
             <div id="toy-container">
                 <div class="toy">
+                    <a href="/harmonograph/">
+                        <img src="img/app-icons/harmonograph.png" class="toy-img">
+                        <div class="toy-name">Harmonograph</div>
+                    </a>
+                </div>
+                <div class="toy">
                     <a href='/Boids/'>
                         <img src="img/app-icons/herd.png" class="toy-img">
                         <div class="toy-name">Flock Sim</div>
