--- a/index.html
+++ b/index.html
@@ -96,6 +96,9 @@
                     </ul>
                 </li>
                 <li>
+                    <a href="https://gmufourthestate.com/author/iking5/" target="_blank">Peer Reviewed: A Webcomic</a> (2018)
+                </li>
+                <li>
                     <a href="https://books.google.com/books/about/The_Sixth_Kingdom_and_Other_Essays_I_Wro.html?id=yH9eDwAAQBAJ" target="_blank"> The Sixth Kingdom and Other Essays</a> (2018)
                 </li>
             </ul>
