--- a/index.html
+++ b/index.html
@@ -48,24 +48,28 @@
             <h4>Academic</h4>
             <ul>
                 <li>
-                    <a href="https://petsymposium.org/popets/2024/popets-2024-0121.pdf", target="_blank">Maui: Black-Box Edge Privacy Attack on Graph Neural Networks</a>. Haoyu He, Isaiah J. King, and H. Howie Huang. PoPETS, 2024.
+                    <a href="https://petsymposium.org/popets/2024/popets-2024-0121.pdf", target="_blank">Maui: Black-Box Edge Privacy Attack on Graph Neural Networks</a>.<br>
+                    Haoyu He, Isaiah J. King, and H. Howie Huang. PoPETS, 2024.
                     <a href="papers/maui.pdf" target="_blank">
                         <img src="img/pdf.png" class="pdf">
                     </a>
                 </li>
                 <li>
-                    <a href='https://dl.acm.org/doi/abs/10.1145/3607199.3607201', target='_blank'>EdgeTorrent: Real-time Temporal Graph Representations for Intrusion Detection</a>. Isaiah J. King, Xiaokui Shu, Jiyong Jang, Kevin Eykholt, Taesung Lee, and H. Howie Huang. RAID, 2023.
+                    <a href='https://dl.acm.org/doi/abs/10.1145/3607199.3607201', target='_blank'>EdgeTorrent: Real-time Temporal Graph Representations for Intrusion Detection</a>.<br>
+                    Isaiah J. King, Xiaokui Shu, Jiyong Jang, Kevin Eykholt, Taesung Lee, and H. Howie Huang. RAID, 2023.
                     <a href="papers/EdgeTorrent.pdf" target="_blank">
                         <img src="img/pdf.png" class="pdf">
                     </a>
                 </li>
                 <li>
-                    <a href='https://ieeexplore.ieee.org/abstract/document/10020645', target='_blank'>Graggle: A Graph-based Approach to Document Clustering</a>. Isaiah J. King and H. Howie Huang. IEEE BigData, 2022.
+                    <a href='https://ieeexplore.ieee.org/abstract/document/10020645', target='_blank'>Graggle: A Graph-based Approach to Document Clustering</a>.<br>
+                    Isaiah J. King and H. Howie Huang. IEEE BigData, 2022.
                     <a href="papers/graggle.pdf" target="_blank">
                         <img src="img/pdf.png" class="pdf">
                     </a>
                 </li>
-                <li>Euler: Detecting Network Lateral Movement via Scalable Temporal Link Prediction. Isaiah J. King and H. Howie Huang.</li>
+                <li>Euler: Detecting Network Lateral Movement via Scalable Temporal Link Prediction.</li>
+                Isaiah J. King and H. Howie Huang.
                 <ul>
                     <li>
                         <a href='https://dl.acm.org/doi/10.1145/3588771', target='_blank'>Journal Version</a> (ACM TOPS, 2023)
