Adding NetHawk (proceedings not published yet, used placeholder url)

--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
             <h4>Academic</h4>
             <ul>
                 <li>
+                    <a href="https://ieeexplore.ieee.org/xpl/conhome/1803058/all-proceedings", target="_blank">NetHawk: Hunting Advanced Persistent Threats via Structural and Temporal Graph Anomalies</a>.<br>
+                    Benjamin Bowman, Isaiah J. King, Rimon Melamed, H. Howie Huang
+                    <a href="papers/NetHawk.pdf" target="_blank">
+                        <img src="img/pdf.png" class="pdf">
+                    </a>
+                </li>
+                <li>
                     <a href="https://petsymposium.org/popets/2024/popets-2024-0121.pdf", target="_blank">Maui: Black-Box Edge Privacy Attack on Graph Neural Networks</a>.<br>
                     Haoyu He, Isaiah J. King, and H. Howie Huang. PoPETS, 2024.
                     <a href="papers/maui.pdf" target="_blank">
