--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <h1>Isaiah J. King</h1>
             </div>
             </a>
+            <div id="middle-content">
             <div id="infobox">
                 <div id="vspace"></div>
                 <div id="headshot">
@@ -40,8 +41,8 @@
                 <h3><a href="blog/index.html">Blog</a></h3>
 
             </div>
+
             <div id="body-container">
-            <div id="body">
             <br>
 
             <h3>Publications</h3>
@@ -156,17 +157,18 @@
             </div>
 
             </div>
-            </div>
-    </div>
-    <div id="footer">
-        <div id="footer-container">
-            <a href="https://github.com/zazyzaya" target="_blank"><img src='img/github.png'></a>
-            <a href="https://linkedin.com/in/isaiah-k-7b730b82/" target="_blank"><img src="img/linkedin.png"></a>
-            <a href="https://medium.com/@iking5" target="_blank"><img src="img/medium.png"></a>
+            <div id="clear" style="clear:both;"></div>
         </div>
-        <div id="footer-right">
-            <a href="https://graphlab.seas.gwu.edu/" target="_blank">
-            <img src='img/graph_lab_logo.png'></a>
+        <div id="footer">
+            <div id="footer-container">
+                <a href="https://github.com/zazyzaya" target="_blank"><img src='img/github.png'></a>
+                <a href="https://linkedin.com/in/isaiah-k-7b730b82/" target="_blank"><img src="img/linkedin.png"></a>
+                <a href="https://medium.com/@iking5" target="_blank"><img src="img/medium.png"></a>
+            </div>
+            <div id="footer-right">
+                <a href="https://graphlab.seas.gwu.edu/" target="_blank">
+                <img src='img/graph_lab_logo.png'></a>
+            </div>
         </div>
     </div>
     </body>
