Updating CNS link

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <h4>Academic</h4>
             <ul>
                 <li>
-                    <a href="https://ieeexplore.ieee.org/xpl/conhome/1803058/all-proceedings", target="_blank">NetHawk: Hunting Advanced Persistent Threats via Structural and Temporal Graph Anomalies</a>.<br>
+                    <a href="https://ieeexplore.ieee.org/document/10735484", target="_blank">NetHawk: Hunting Advanced Persistent Threats via Structural and Temporal Graph Anomalies</a>.<br>
                     Benjamin Bowman, Isaiah J. King, Rimon Melamed, H. Howie Huang. IEEE CNS, 2024.
                     <a href="papers/NetHawk.pdf" target="_blank">
                         <img src="img/pdf.png" class="pdf">
