--- a/index.html
+++ b/index.html
@@ -49,6 +49,13 @@
             <h4>Academic</h4>
             <ul>
                 <li>
+                    Fine-grained Graph-based Anomaly Detection on Vehicle Controller Area Networks.<br>
+                    Isaiah J. King, Benjamin Bowman, H. Howie Huang. IEEE BigData, 2024.
+                    <a href="papers/CAN.pdf" target="_blank">
+                        <img src="img/pdf.png" class="pdf">
+                    </a>
+                </li>
+                <li>
                     <a href="https://ieeexplore.ieee.org/document/10735484", target="_blank">NetHawk: Hunting Advanced Persistent Threats via Structural and Temporal Graph Anomalies</a>.<br>
                     Benjamin Bowman, Isaiah J. King, Rimon Melamed, H. Howie Huang. IEEE CNS, 2024.
                     <a href="papers/NetHawk.pdf" target="_blank">
@@ -96,14 +103,26 @@
             <h4>Other</h4>
             <ul>
                 <li>
+                    The Middle Author, <it>LabLit</it> (2025, upcoming)
+                </li>
+                <li>
+                    They Knocked it Down, <it>The Piker Press</it> (2025, upcoming)
+                </li>
+                <li>
+                    Intuitive Analysis, <it>Bewildering Stories</it> (2025, upcoming)
+                </li>
+                <li>
+                    I Met a Gnome Last Flag Day, <it>Witcraft</it> (2025, upcoming)
+                </li>
+                <li>
                     <a href="https://books.google.com/books/about/The_Bucket_and_Other_Weird_Stories.html?id=xD_HDwAAQBAJ" target="_blank">The Bucket and Other Weird Stories</a> (2019)<br>
                     Excerpts published:
                     <ul>
                         <li>
-                            <a href='https://www.seattlestar.net/2022/03/resignation/', target='_blank'>Resignation</a> (The Seattle Star, 2022)
+                            <a href='https://www.seattlestar.net/2022/03/resignation/', target='_blank'>Resignation</a>, <it>The Seattle Star</it> (2022)
                         </li>
                         <li>
-                            <a href='https://www.seattlestar.net/2021/12/the-civil-disobedience-club/', target="_blank">The Civil Disobedience Club</a> (The Seattle Star, 2021)
+                            <a href='https://www.seattlestar.net/2021/12/the-civil-disobedience-club/', target="_blank">The Civil Disobedience Club</a>, <it>The Seattle Star</it> (2021)
                         </li>
                     </ul>
                 </li>
