--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div id="infobox">
                 <div id="vspace"></div>
                 <div id="headshot">
-                <img src='img/headshot.png' alt="Headshot of Isaiah">
+                <img src='img/headshot.jpeg' alt="Headshot of Isaiah">
                 </div>
                 <p>iking5 (at) gwu.edu</p>
 
