--- a/index.html
+++ b/index.html
@@ -103,26 +103,26 @@
             <h4>Other</h4>
             <ul>
                 <li>
-                    The Middle Author, <it>LabLit</it> (2025, upcoming)
+                    The Middle Author, <i>LabLit</i> (2025, upcoming)
                 </li>
                 <li>
-                    They Knocked it Down, <it>The Piker Press</it> (2025, upcoming)
+                    They Knocked it Down, <i>The Piker Press</i> (2025, upcoming)
                 </li>
                 <li>
-                    Intuitive Analysis, <it>Bewildering Stories</it> (2025, upcoming)
+                    Intuitive Analysis, <i>Bewildering Stories</i> (2025, upcoming)
                 </li>
                 <li>
-                    I Met a Gnome Last Flag Day, <it>Witcraft</it> (2025, upcoming)
+                    I Met a Gnome Last Flag Day, <i>Witcraft</i> (2025, upcoming)
                 </li>
                 <li>
                     <a href="https://books.google.com/books/about/The_Bucket_and_Other_Weird_Stories.html?id=xD_HDwAAQBAJ" target="_blank">The Bucket and Other Weird Stories</a> (2019)<br>
                     Excerpts published:
                     <ul>
                         <li>
-                            <a href='https://www.seattlestar.net/2022/03/resignation/', target='_blank'>Resignation</a>, <it>The Seattle Star</it> (2022)
+                            <a href='https://www.seattlestar.net/2022/03/resignation/', target='_blank'>Resignation</a>, <i>The Seattle Star</i> (2022)
                         </li>
                         <li>
-                            <a href='https://www.seattlestar.net/2021/12/the-civil-disobedience-club/', target="_blank">The Civil Disobedience Club</a>, <it>The Seattle Star</it> (2021)
+                            <a href='https://www.seattlestar.net/2021/12/the-civil-disobedience-club/', target="_blank">The Civil Disobedience Club</a>, <i>The Seattle Star</i> (2021)
                         </li>
                     </ul>
                 </li>
