--- a/index.html
+++ b/index.html
@@ -103,9 +103,6 @@
             <h4>Other</h4>
             <ul>
                 <li>
-                    The Middle Author, <i>LabLit</i> (2025, upcoming)
-                </li>
-                <li>
                     They Knocked it Down, <i>The Piker Press</i> (2025, upcoming)
                 </li>
                 <li>
@@ -113,6 +110,9 @@
                 </li>
                 <li>
                     I Met a Gnome Last Flag Day, <i>Witcraft</i> (2025, upcoming)
+                </li>
+                <li>
+                    <a href="https://lablit.com/the-middle-author/", target="_blank">The Middle Author</a>, <i>LabLit</i> (2024)
                 </li>
                 <li>
                     <a href="https://books.google.com/books/about/The_Bucket_and_Other_Weird_Stories.html?id=xD_HDwAAQBAJ" target="_blank">The Bucket and Other Weird Stories</a> (2019)<br>
