Adding AAAI paper

--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
             <h4>Academic</h4>
             <ul>
                 <li>
+                    <a href="https://openreview.net/pdf?id=gZ71u8Wf5o">Exploring the Efficacy of Multi-Agent Reinforcement Learning for Autonomous Cyber Defence: A CAGE Challenge 4 Perspective</a> (pre-print)<br>
+                    Mitchell Kiely et <i>al</i>. AAAI, 2025.
+                </li>
+                <li>
                     Fine-grained Graph-based Anomaly Detection on Vehicle Controller Area Networks.<br>
                     Isaiah J. King, Benjamin Bowman, H. Howie Huang. IEEE BigData, 2024.
                     <a href="papers/CAN.pdf" target="_blank">
