Adding 'Intuitive Analysis' link

--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
                     They Knocked it Down, <i>The Piker Press</i> (2025, upcoming)
                 </li>
                 <li>
-                    Intuitive Analysis, <i>Bewildering Stories</i> (2025, upcoming)
+                    I Met a Gnome Last Flag Day, <i>Witcraft</i> (2025, upcoming)
                 </li>
                 <li>
-                    I Met a Gnome Last Flag Day, <i>Witcraft</i> (2025, upcoming)
+                    <a href="http://www.bewilderingstories.com/issue1075/intuitive_analysis.html", target="_blank">Intuitive Analysis</a>, <i>Bewildering Stories</i> (2025)
                 </li>
                 <li>
                     <a href="https://lablit.com/the-middle-author/", target="_blank">The Middle Author</a>, <i>LabLit</i> (2024)
