adding bigdata link

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <h4>Academic</h4>
             <ul>
                 <li>
-                    Fine-grained Graph-based Anomaly Detection on Vehicle Controller Area Networks.<br>
+                    <a href="https://ieeexplore.ieee.org/document/10825928", target="_blank">Fine-grained Graph-based Anomaly Detection on Vehicle Controller Area Networks.</a><br>
                     Isaiah J. King, Benjamin Bowman, H. Howie Huang. IEEE BigData, 2024.
                     <a href="papers/CAN.pdf" target="_blank">
                         <img src="img/pdf.png" class="pdf">
