Adding academic service section

--- a/index.html
+++ b/index.html
@@ -133,7 +133,11 @@
                     <a href="https://books.google.com/books/about/The_Sixth_Kingdom_and_Other_Essays_I_Wro.html?id=yH9eDwAAQBAJ" target="_blank"> The Sixth Kingdom and Other Essays</a> (2018)
                 </li>
             </ul>
-
+            <br>
+            <h3>Academic Service</h3>
+            <ul>
+                <li>Reviewer: IJCNN 2025</li>
+            </ul>
             <br>
             <h3>Web Toys</h3>
             <div id="toy-container">
