Adding Cybermonic to site

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 <p>Ph.D. student at GWU
                 <br>Studying computer engineering
                 <br>Research assistant with <a href="https://www2.seas.gwu.edu/~howie/glab.html" target="_blank">the GWU Graph Lab</a>
+                <br>Data Scientist at <a href="www.cybermonic.com">Cybermonic</a>
                 <br>2020 ARCS/MWC Scholar
                 <br><br>
                 B.S. Computer Science GMU 2019
