Adding CAGE4 paper

--- a/index.html
+++ b/index.html
@@ -50,7 +50,14 @@
             <h4>Academic</h4>
             <ul>
                 <li>
-                    <a href="https://ieeexplore.ieee.org/document/10825928", target="_blank">Fine-grained Graph-based Anomaly Detection on Vehicle Controller Area Networks.</a><br>
+                    <a href="https://ojs.aaai.org/index.php/AAAI/article/view/35158", target="_blank">Exploring the Efficacy of Multi-Agent Reinforcement Learning for Autonomous Cyber Defence: A CAGE Challenge 4 Perspective</a>.<br>
+                    Mitchel Kiely et <i>al</i>. AAAI, 2025.
+                    <a href="papers/cage4.pdf" target="_blank">
+                        <img src="img/pdf.png" class="pdf">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://ieeexplore.ieee.org/document/10825928", target="_blank">Fine-grained Graph-based Anomaly Detection on Vehicle Controller Area Networks</a>.<br>
                     Isaiah J. King, Benjamin Bowman, H. Howie Huang. IEEE BigData, 2024.
                     <a href="papers/CAN.pdf" target="_blank">
                         <img src="img/pdf.png" class="pdf">
