Adding ICDE papers

--- a/index.html
+++ b/index.html
@@ -50,6 +50,20 @@
             <h4>Academic</h4>
             <ul>
                 <li>
+                    <a href="https://www.computer.org/csdl/proceedings-article/icde/2025/360300b207/26FZzTgXm4E", target="_blank">Trail: A Knowledge Graph-Based Approach for Attributing Advanced Persistent Threats</a>.<br>
+                    Isaiah J. King, Ramiro Ramirez, Benjamin Bowman, H. Howie Huang. IEEE ICDE, 2025.
+                    <a href="papers/trail.pdf" target="_blank">
+                        <img src="img/pdf.png" class="pdf">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.computer.org/csdl/proceedings-article/icde/2025/360300a821/26FZzz80jKM", target="_blank">Revelio: Revealing Important Message Flows in Graph Neural Networks</a>.<br>
+                    Haoyu He, Isaiah J. King, H. Howie Huang. IEEE ICDE, 2025.
+                    <a href="papers/revelio.pdf" target="_blank">
+                        <img src="img/pdf.png" class="pdf">
+                    </a>
+                </li>
+                <li>
                     <a href="https://ojs.aaai.org/index.php/AAAI/article/view/35158", target="_blank">Exploring the Efficacy of Multi-Agent Reinforcement Learning for Autonomous Cyber Defence: A CAGE Challenge 4 Perspective</a>.<br>
                     Mitchel Kiely et <i>al</i>. AAAI, 2025.
                     <a href="papers/cage4.pdf" target="_blank">
