Adding NeurIPS reviewing

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             <br>
             <h3>Academic Service</h3>
             <ul>
-                <li>Reviewer: IJCNN 2025</li>
+                <li>Reviewer: IJCNN 2025, NeurIPS 2025</li>
             </ul>
             <br>
             <h3>Web Toys</h3>
