--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                     </a>
                 </div>
                 <div class="toy">
-                    <a href='https://zaya-mancala-migrated.herokuapp.com/'>
+                    <a href='"https://mancala.isaiahjking.com/'>
                         <img src="img/app-icons/mancala.png" class="toy-img" style="background-color: lightblue;">
                         <div class="toy-name">Mancala AI</div>
                     </a>
