Adding PC service

--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
             <br>
             <h3>Academic Service</h3>
             <ul>
+                <li>Program Committee: AAAI 2026</li>
                 <li>Reviewer: IJCNN 2025, NeurIPS 2025</li>
             </ul>
             <br>
