--- a/index.html
+++ b/index.html
@@ -162,6 +162,12 @@
             <h3>Web Toys</h3>
             <div id="toy-container">
                 <div class="toy">
+                    <a href="/ContrailsJS/">
+                        <img src="img/app-icons/skywriter.png" class="toy-img">
+                        <div class="toy-name">Skywriter</div>
+                    </a>
+                </div>
+                <div class="toy">
                     <a href="/harmonograph/">
                         <img src="img/app-icons/harmonograph.png" class="toy-img">
                         <div class="toy-name">Harmonograph</div>
