Changing books.google links to archive.org

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <a href="https://lablit.com/the-middle-author/", target="_blank">The Middle Author</a>, <i>LabLit</i> (2024)
                 </li>
                 <li>
-                    <a href="https://books.google.com/books/about/The_Bucket_and_Other_Weird_Stories.html?id=xD_HDwAAQBAJ" target="_blank">The Bucket and Other Weird Stories</a> (2019)<br>
+                    <a href="https://archive.org/details/thebucket_201912" target="_blank">The Bucket and Other Weird Stories</a> (2019)<br>
                     Excerpts published:
                     <ul>
                         <li>
@@ -149,7 +149,7 @@
                     <a href="https://gmufourthestate.com/author/iking5/" target="_blank">Peer Reviewed: A Webcomic</a> (2018)
                 </li>
                 <li>
-                    <a href="https://books.google.com/books/about/The_Sixth_Kingdom_and_Other_Essays_I_Wro.html?id=yH9eDwAAQBAJ" target="_blank"> The Sixth Kingdom and Other Essays</a> (2018)
+                    <a href="https://archive.org/details/thesixthkingdom" target="_blank"> The Sixth Kingdom and Other Essays</a> (2018)
                 </li>
             </ul>
             <br>
