Adding AI Mag paper

--- a/index.html
+++ b/index.html
@@ -61,11 +61,19 @@
                     </a>
                 </li>
                 <li>
-                    <a href="https://ojs.aaai.org/index.php/AAAI/article/view/35158", target="_blank">Exploring the Efficacy of Multi-Agent Reinforcement Learning for Autonomous Cyber Defence: A CAGE Challenge 4 Perspective</a>.<br>
-                    Mitchel Kiely et <i>al</i>. AAAI, 2025.
-                    <a href="papers/cage4.pdf" target="_blank">
-                        <img src="img/pdf.png" class="pdf">
-                    </a>
+                    Exploring the Efficacy of Multi-Agent Reinforcement Learning for Autonomous Cyber Defence: A CAGE Challenge 4 Perspective<br>
+                    Mitchel Kiely et al.
+                    <ul>
+                        <li>
+                            <a href="https://doi.org/10.1002/aaai.70021", target="_blank">Journal Version</a> (<it>AI Magazine</it>, Vol. 46, No. 3, 2025)
+                        </li>
+                        <li>
+                            <a href="https://ojs.aaai.org/index.php/AAAI/article/view/35158", target="_blank">Conference Version</a> (AAAI, 2025) 
+                            <a href="papers/cage4.pdf" target="_blank">
+                                <img src="img/pdf.png" class="pdf">
+                            </a>
+                        </li>
+                    </ul>
                 </li>
                 <li>
                     <a href="https://ieeexplore.ieee.org/document/10825928", target="_blank">Fine-grained Graph-based Anomaly Detection on Vehicle Controller Area Networks</a>.<br>
@@ -106,7 +114,7 @@
                 Isaiah J. King and H. Howie Huang.
                 <ul>
                     <li>
-                        <a href='https://dl.acm.org/doi/10.1145/3588771', target='_blank'>Journal Version</a> (ACM TOPS, 2023)
+                        <a href='https://dl.acm.org/doi/10.1145/3588771', target='_blank'>Journal Version</a> (ACM TOPS, Vol. 26, No. 3, 2023)
                         <a href="papers/EulerACM.pdf" target="_blank">
                             <img src="img/pdf.png" class="pdf">
                         </a>
@@ -156,7 +164,7 @@
             <h3>Academic Service</h3>
             <ul>
                 <li>Program Committee: AAAI 2026</li>
-                <li>Reviewer: IJCNN 2025, NeurIPS 2025</li>
+                <li>Reviewer: ICLR 2026; NeurIPS 2025; CHI 2025; IJCNN 2025</li>
             </ul>
             <br>
             <h3>Web Toys</h3>
