--- a/index.html
+++ b/index.html
@@ -170,6 +170,12 @@
             <h3>Web Toys</h3>
             <div id="toy-container">
                 <div class="toy">
+                    <a href="/FractalJS/">
+                        <img src="img/app-icons/fractal.png" class="toy-img">
+                        <div class="toy-name">Fractals</div>
+                    </a>
+                </div>
+                <div class="toy">
                     <a href="/ContrailsJS/">
                         <img src="img/app-icons/skywriter.png" class="toy-img">
                         <div class="toy-name">Skywriter</div>
